<resources>
    <string name="app_name">Task Keeper</string>
    <string name="version">B_0.9</string>
    <string name="devStage">BETA</string>
    

    <!--MENU ITEMS-->
    <string name="action_addlist">Add List</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_close">Close</string>

    <!--DETAIL FRAG-->
    <string name="priority">Priority</string>

    <!-- SETTINGS KEYS -->
    <string name="key_fab">HIDE_FAB</string>
    <string name="key_theme">THEME</string>

    <!--SETTINGS FRAG-->
    <string name="settings_title">Settings</string>
    <string name="set_name">Change toolbar name</string>
    <string name="set_theme">Change app theme</string>
    <string name="set_fab">Hide add button on scroll</string>
    <string name="set_task_order">Set order of tasks</string>
    <string name="set_due_time">Set due date time</string>
    <string name="set_due_remind">Set past due indicator</string>
    <string name="set_list_order">Change list order</string>
    <string name="set_list_name">Change list name</string>
    <string name="set_del_list">Delete a list and its tasks</string>
    <string name="set_del_usure">Choose a list to delete</string>
    <string name="set_del_all">Delete ALL lists</string>
    <string name="set_reset">Reset settings (does not effect tasks)</string>
    <string name="set_reset_confirm">Settings have been reset</string>


    <!--TOAST MESSAGES-->
    <string name="set_del_warning">This will delete ALL tasks from that list!</string>
    <string name="set_del_confirm">and it\'s tasks have been deleted.</string>
    <string name="set_edit_confirm">has been updated to</string>
    <string name="set_del_delete">ALL Tasks and Lists have been deleted.</string>

    <!--ALERT DIALOG STRINGS-->
    <string name="dialog_error">What are you really trying to do?</string>
    <string name="dialog_delete">DELETE</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_ok">OK</string>
    <!--ADD LIST CUSTOM DIALOG-->
    <string name="addlist_dialog_title">Would you like to add a new list?</string>
    <string name="addlist_dialog_hint">Just add the list name below and press \'CREATE\'.</string>
    <string name="addlist_dialog_create">CREATE</string>
    <!--CHANGE APP NAME CUSTOM DIALOG-->
    <string name="changeName_dialog_title">Would you like to change the toolbar name?</string>
    <string name="changeName_dialog_hint">This will change the name at the top of the main page.</string>
    <string name="changeName_dialog_create">CHANGE</string>
    <string name="changeName_dialog_default">DEFAULT</string>
    <!--PRIORITY CUSTOM DIALOG-->
    <string name="priority_choose">Choose a priority</string>
    <string-array name="priority_colors">
        <item>Neutral</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <!--THEME CUSTOM DIALOG-->
    <string name="theme_dialog_title">Change color scheme</string>
    <string name="theme_dialog_message">Pick one of the colors below to change the theme of the app</string>
    <string-array name="theme_dialog_spinner">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Pink</item>
    </string-array>
    <!--DEFAULT TIMES DIALOG-->
    <string name="dueTimeTitle">Choose due date time period</string>
    <string-array name="defaultTimes">
        <item>Day</item>
        <item>Week</item>
        <item>Two Weeks</item>
        <item>Month</item>
    </string-array>
    <!--BOTTOM SHEET-->
    <string name="sheet_delete">DELETE</string>
    <string name="sheet_share">SHARE</string>
    <!--DELETE DIALOG-->
    <string-array name="delete_all_dialog">
        <item>Are you sure?</item>
        <item>This will delete every list and task.</item>
        <item>CANCEL</item>
        <item>DELETE</item>
    </string-array>
    <string-array name="delete_dialog">
        <item>Are you sure?</item>
        <item>This will delete the task and can not be undone</item>
        <item>CANCEL</item>
        <item>DELETE</item>
    </string-array>
    <string-array name="set_del_dialog">
        <item>Choose a list to delete, this will delete it\'s tasks as well.</item>
        <item>CANCEL</item>
        <item>DELETE</item>
    </string-array>
    <string-array name="set_edit_dialog">
        <item>Choose a list to edit</item>
        <item>CANCEL</item>
        <item>EDIT</item>
    </string-array>
    <string-array name="set_edit_dialog2">
        <item>Enter the list\'s new name</item>
        <item>CANCEL</item>
        <item>SAVE</item>
    </string-array>


    <string name="detail_transition">DETAIL_TRANSITION</string>


</resources>
