<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_settings"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/settingsRevealView"
                    android:background="@color/colorWhite"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"/>


                <TextView
                    android:id="@+id/toolbarName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_name"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"/>


                <TextView
                    android:id="@+id/appTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_theme"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/hideFab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/settings_padding"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/set_fab"
                        android:clickable="true"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_toLeftOf="@+id/checkBox"
                        android:layout_toStartOf="@+id/checkBox" />



                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox"
                        android:layout_margin="@dimen/settings_padding"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow"/>



                <TextView
                    android:id="@+id/taskOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_task_order"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"/>



                <TextView
                    android:id="@+id/defaultTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_due_time"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"/>


                <TextView
                    android:id="@+id/pastDue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_due_remind"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow"/>


                <TextView
                    android:id="@+id/listOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_list_order"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"/>


                <TextView
                    android:id="@+id/listName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_list_name"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow"/>

                <TextView
                    android:id="@+id/dltList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_del_list"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorBlacklight"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:layout_marginStart="@dimen/card_margin"
                    android:layout_marginRight="@dimen/card_margin"
                    android:layout_marginEnd="@dimen/card_margin"/>


                <TextView
                    android:id="@+id/dltALL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_del_all"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow"/>

                <TextView
                    android:id="@+id/resetSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/settings_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/set_reset"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow"/>



            </LinearLayout>





            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--&gt;-->

            <!--<TextView-->
            <!--android:id="@+id/textView4"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="@dimen/settings_padding"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Large Text"-->
            <!--android:clickable="true"-->
            <!--android:background="?android:attr/selectableItemBackground"-->
            <!--/>-->




            <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/checkBox2"-->
            <!--android:layout_margin="@dimen/settings_padding"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true" />-->

            <!--</RelativeLayout>-->

        </ScrollView>


    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>